--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
 # ComfyUI AI Assistant 依赖项
 
 # 基础包
-aiohttp>=3.8.0  # 用于异步HTTP服务和客户端
-pillow>=9.0.0   # 图像处理
+aiohttp>=3.8.5       # 用于异步HTTP服务和客户端
+pillow>=10.0.1       # 图像处理
+markdown2>=2.4.8     # Markdown解析
+beautifulsoup4>=4.12.2  # HTML解析
+html5lib>=1.1        # HTML5解析库
+requests>=2.31.0     # HTTP客户端库
 
 # AI服务接口
-g4f>=0.1.9      # 用于免费GPT服务
-requests>=2.28.0  # HTTP客户端库（某些G4F提供商可能使用）
+g4f>=0.1.7.9         # 用于免费GPT服务
+dashscope>=1.13.0    # 阿里通义千问接口
 
 # 工具包
-# python-dotenv>=0.20.0  # 环境变量管理（可选，用于API密钥管理）
-# tqdm>=4.64.0           # 进度条（可选，用于大型文件上传）
+python-dotenv>=1.0.0 # 环境变量管理（用于API密钥管理）
+tqdm>=4.66.1         # 进度条（用于大型文件上传）
+jsonfinder>=0.3.0    # JSON查找工具
+demjson3>=3.0.6      # JSON修复库
 
 # 数据处理
-# ujson>=5.5.0           # 更快的JSON处理（可选） 
+ujson>=5.8.0         # 更快的JSON处理
+tinydb>=4.8.0        # 轻量级文档数据库
+
+# 用于工作流解析和处理
+jieba>=0.42.1        # 中文分词
+colorama>=0.4.6      # 终端着色（用于日志输出）
+chardet>=5.2.0       # 字符编码检测 
